Fixed alignment issue mobile navigation

--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -223,8 +223,9 @@ img {
 @media(max-width: 640px) {
 
 	.container .container-inner {
-		padding: 0 5%;
-		width: 90%;
+		.border-box;
+		padding: 0 20px;
+		width: 100%;
 	}
 	
 }
